# moonbase

./: .gitignore  AGENTS.md  Cargo.toml  DOORS_IMPLEMENTATION_PLAN.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_PLAN.md  README.md  test_bulletins.rs
src/: box_renderer.rs  bulletin_repository.rs  bulletins.rs  config.rs  errors.rs  lib.rs  main.rs  message_repository.rs  messages.rs  session.rs  user_repository.rs  users.rs
src/menu/: menu_bulletin.rs  menu_main.rs  menu_message.rs  menu_user.rs  mod.rs
src/services/: bulletin_service.rs  message_service.rs  mod.rs  user_service.rs
telnet-negotiation/: Cargo.toml  README.md
telnet-negotiation/examples/: phase2_demo.rs  phase3_demo.rs  phase4_demo.rs  phase5_demo.rs  phase6_demo.rs  telnet_test_client.rs
telnet-negotiation/src/: lib.rs  negotiation.rs  parser.rs  protocol.rs  stream.rs
telnet-negotiation/src/options/: echo.rs  mod.rs  naws.rs  terminal_type.rs
tests/: README.md  bulletin_tests.rs  message_tests.rs  telnet_integration_tests.rs  user_tests.rs
tests/common/: mod.rs
