[package]
name = "moonbase"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "moonbase"
path = "src/main.rs"

[lib]
name = "moonbase"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
jiff = { version = "0.2.15", features = ["serde"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"
